Migrate yang-model-ri to JUnit5
This is mostly and automated rewrite.

Change-Id: I82bc95aa5d164af8cd6d96764396394299ab3a23
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>